<resources>
    <string name="app_name">LAB02</string>
    <string name="c">C</string>
    <string name="del">DEL</string>
    <string name="xd">%</string>
    <string name="Division">/</string>
    <string name="Multiplication">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="Plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="Subtraction">-</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="Point">.</string>
    <string name="Equal">=</string>
</resources>